@@ -12,5 +12,7 @@
 	d: "@DOC_OUTPUT_DIR@",
 	
 	// use this template
-	t: "@DOC_TEMPLATE_DIR@"
+	t: "@DOC_TEMPLATE_DIR@",
+	
+	plugins: "@DOC_PLUGINS_DIR@"
 }
